--- a/C0721G2-livestock-farm-FE/src/app/component/treatement/treatement-create/treatement-create.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/treatement/treatement-create/treatement-create.component.html
@@ -21,33 +21,33 @@
             <label  class="form-label">Ngày đăng ký<span style="color: red">(*)</span></label>
             <input type="date" class="form-control" formControlName="treatementDate">
             <small
-              *ngIf="formCreate.controls.treatementDate.errors?.required"
-              class="fst-italic" style="color: red">Không được để trống</small>
+              *ngIf="formCreate.controls.treatementDate.errors?.required && (formCreate.controls.treatementDate.touched || formCreate.controls.treatementDate.dirty)"
+              class="fst-italic" style="color: red">Ngày đăng ký Không được để trống.</small>
           </div>
           <div class="col-md-6 position-relative">
             <label class="form-label">Người khám <span style="color: red">(*)</span></label>
             <input type="text" class="form-control" required placeholder="Nhập tên người khám" formControlName="doctor">
             <small
               *ngIf="formCreate.controls.doctor.errors?.required && (formCreate.controls.doctor.touched || formCreate.controls.doctor.dirty) "
-              class="fst-italic" style="color: red">Không được để trống</small>
+              class="fst-italic" style="color: red">Tên người khám Không được để trống.</small>
             <small
               *ngIf="formCreate.controls.doctor.errors?.maxlength && (formCreate.controls.doctor.touched || formCreate.controls.doctor.dirty) "
-              class="fst-italic" style="color: red">Độ dài tối đa: 40 ký tự</small>
+              class="fst-italic" style="color: red">Độ dài tối đa: 40 ký tự.</small>
             <small
               *ngIf="formCreate.controls.doctor.errors?.pattern && (formCreate.controls.doctor.touched || formCreate.controls.doctor.dirty) "
-              class="fst-italic" style="color: red">Tên không được có số và từ 2 kí tự trở lên</small>
+              class="fst-italic" style="color: red">Tên không được có số/ký tự đặc biệt và từ 2 kí tự trở lên.</small>
           </div>
           <div class="col-md-6 position-relative">
             <label class="form-label">Mã lợn <span style="color: red">(*)</span></label>
             <input type="text" class="form-control" required placeholder="Nhập mã lợn" formControlName="individual">
             <small
               *ngIf="formCreate.controls.individual.errors?.required && (formCreate.controls.individual.touched || formCreate.controls.individual.dirty) "
-              class="fst-italic" style="color: red">Không được để trống</small>
+              class="fst-italic" style="color: red">Mã lợn không được để trống.</small>
             <small *ngIf="errorMessage!==''" class="fst-italic" style="color: red">
               {{errorMessage}}</small>
             <small
               *ngIf="formCreate.controls.individual.errors?.pattern"
-              class="fst-italic" style="color: red">Phải đúng định dạng IN-XXXX.</small>
+              class="fst-italic" style="color: red">Mã lợn phải đúng định dạng IN-XXXX.</small>
 
 
           </div>
@@ -56,34 +56,34 @@
             <input type="text" class="form-control" required placeholder="Nhập loại bệnh" formControlName="kindOfDisease">
             <small
               *ngIf="formCreate.controls.kindOfDisease.errors?.required && (formCreate.controls.kindOfDisease.touched || formCreate.controls.kindOfDisease.dirty) "
-              class="fst-italic" style="color: red">Không được để trống</small>
+              class="fst-italic" style="color: red">Loại bệnh không được để trống.</small>
             <small
               *ngIf="formCreate.controls.kindOfDisease.errors?.maxlength && (formCreate.controls.kindOfDisease.touched || formCreate.controls.kindOfDisease.dirty) "
-              class="fst-italic" style="color: red">Độ dài tối đa: 255 ký tự</small>
-<!--            <small style="color: red">Không được để trống.</small>-->
-<!--            <small style="color: red">Độ dài tối đa: 10 ký tự</small>-->
+              class="fst-italic" style="color: red">Độ dài tối đa: 255 ký tự.</small>
+            <!--            <small style="color: red">Không được để trống.</small>-->
+            <!--            <small style="color: red">Độ dài tối đa: 10 ký tự</small>-->
           </div>
           <div class="col-md-6 position-relative">
             <label class="form-label">Loại Thuốc <span style="color: red">(*)</span></label>
             <input type="text" class="form-control" required placeholder="Nhập loại thuốc" formControlName="medicine">
             <small
               *ngIf="formCreate.controls.medicine.errors?.required && (formCreate.controls.medicine.touched || formCreate.controls.medicine.dirty) "
-              class="fst-italic" style="color: red">Không được để trống</small>
+              class="fst-italic" style="color: red">Loại thuốc không được để trống.</small>
             <small
               *ngIf="formCreate.controls.medicine.errors?.maxlength && (formCreate.controls.medicine.touched || formCreate.controls.medicine.dirty) "
-              class="fst-italic" style="color: red">Độ dài tối đa: 40 ký tự</small>
-<!--            <small style="color: red">Không được để trống.</small>-->
-<!--            <small style="color: red">Độ dài tối đa: 10 ký tự</small>-->
+              class="fst-italic" style="color: red">Độ dài tối đa: 40 ký tự.</small>
+            <!--            <small style="color: red">Không được để trống.</small>-->
+            <!--            <small style="color: red">Độ dài tối đa: 10 ký tự</small>-->
           </div>
           <div class="col-md-6 position-relative">
             <label for="quantily" class="form-label">Nhập số lượng <span style="color: red">(*)</span></label>
-            <input type="number" class="form-control" id="quantily" name="quantily" min="1" placeholder="Nhập số lượng thuốc" formControlName="quantily">
+            <input type="number" class="form-control" id="quantily" name="quantily" min="1" placeholder="Nhập số lượng thuốc" formControlName="quantily" (keydown.e)="$event.preventDefault()">
             <small
-              *ngIf="formCreate.controls.quantily.errors?.required"
-              class="fst-italic" style="color: red">Không được để trống</small>
+              *ngIf="formCreate.controls.quantily.errors?.required && (formCreate.controls.quantily.touched || formCreate.controls.quantily.dirty)"
+              class="fst-italic" style="color: red">Số lượng không được để trống.</small>
             <small
               *ngIf="formCreate.controls.quantily.errors?.min ||formCreate.controls.quantily.errors?.max || formCreate.controls.quantily.errors?.pattern "
-              class="fst-italic" style="color: red">Chỉ được nhập số nguyên dương (0-100)</small>
+              class="fst-italic" style="color: red">Chỉ được nhập số nguyên dương (0-100).</small>
 
           </div>
           <div class="col-md-12 position-relative">
@@ -93,13 +93,13 @@
           <div class="btn-toolbar mb-3 d-flex flex-row-reverse bd-highlight" role="toolbar"
                aria-label="Toolbar with button groups">
             <div class="btn-group me-2 float-right">
-              <button class="btn btn-success customBtn" type="submit" data-bs-toggle="modal"
-                      data-bs-target="#save" [disabled]="formCreate.invalid">Đăng ký</button>
+              <button class="btn btn-success customBtn" type="submit" data-bs-toggle="save"
+                      data-bs-target="#save" [disabled]="formCreate.invalid" >Đăng ký</button>
             </div>
             <div class="btn-group me-2 float-right">
-              <button class="btn btn-secondary customBtn" type="submit">Hủy</button>
+              <button class="btn btn-secondary customBtn" type="submit"  routerLink="/treatement/list">Hủy</button>
             </div>
-            <!--Modal sửa-->
+            <!--Modal đăng ký-->
             <div class="modal fade" id="save" data-bs-backdrop="static" data-bs-keyboard="false"
                  tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
               <div class="modal-dialog">
@@ -124,4 +124,33 @@
     </div>
   </div>
   <div></div>
+</div>
+
+<!--modal hiện xác nhận-->
+
+<div class="modal fade" id="modal2" role="dialog" tabindex="-1" aria-labelledby="exampleModalLabel"
+     aria-hidden="true" style="text-align: left">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header btn-danger">
+        <h5 class="modal-title" id="exampleModalLabel">Thông báo</h5>
+        <button type="button" class="" data-bs-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Bạn có muốn thêm cá thể mới cá thể</p>
+        <!--        <p>{{individual.id}}</p>-->
+        <span style="color:red"></span>
+      </div>
+      <div class="modal-footer">
+        <div class="btn-group">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+        <div class="btn-group">
+          <button type="submit" class="btn btn-success " (click)="onSubmit()" [routerLink]="['/individual/list']">Xác nhận</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
