--- a/C0721G2-livestock-farm-FE/src/app/component/treatement/treatement-list/treatement-list.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/treatement/treatement-list/treatement-list.component.html
@@ -28,28 +28,29 @@
               </div>
 
               <form (ngSubmit)="onSubmit()" #myNgForm="ngForm"
-                class="d-flex  float-end ">
+                    class="d-flex  float-end ">
 
                 <div class="col-md-4  col-lg-4 fw-bold px-2 ">
 
                   <input class="form-control " [(ngModel)]="searchDoctor" id="searchDoctor" name="searchDoctor"
-                         type="text"
+                         type="search"
                          placeholder=" Nhập tên người khám">
 
                 </div>
                 <div class="col-md-3 ms-sm-auto col-lg-3 fw-bold px-2 ">
 
                   <input class="form-control" [(ngModel)]="searchKindOfDisease" id="searchKindOfDisease" name="searchKindOfDisease"
-                         type="text"
+                         type="search"
                          placeholder=" Nhập bệnh">
                 </div>
                 <div class=" col-md-3 ms-sm-auto col-lg-3 fw-bold px-2 " >
                   <input class="form-control" [(ngModel)]="searchCage" id="searchCage" name="searchCage"
-                         type="text"
+                         type="search"
                          placeholder=" Nhập chuồng">
                 </div>
 
                 <div class="col-md-2 ms-sm-auto col-lg-2  ">
+
                   <div class="float-end">
                     <button class="btn btn-success text-white"><i class="fas fa-search"></i> Tìm kiếm
                     </button>
@@ -60,133 +61,133 @@
           </div>
           <span class="d-flex justify-content-center pt-3" style="color: red" *ngIf="this.message; else showtable">{{this.message}}</span>
           <ng-template #showtable>
-          <div class="">
+            <div class="">
 
-            <div class="mt-3  table-responsive{-sm|-md|-lg|-xl|-xxl}">
+              <div class="mt-3  table-responsive{-sm|-md|-lg|-xl|-xxl}">
 
-              <table class="table table-striped table-hover ">
-                <thead class=" text-white bg-success">
-                <tr>
-                  <th>STT</th>
-                  <th>Ngày</th>
-                  <th>Chuồng</th>
-                  <th>Mã lợn</th>
-                  <th>Người khám</th>
-                  <th>Bệnh</th>
-                  <th>Thuốc</th>
-                  <th>Số lượng</th>
-                  <th class="text-center ">Sửa</th>
-                  <th class="text-center ">Xoá</th>
-                </tr>
-                </thead>
+                <table class="table table-striped table-hover ">
+                  <thead class=" text-white bg-success">
+                  <tr>
+                    <th>STT</th>
+                    <th>Ngày</th>
+                    <th>Chuồng</th>
+                    <th>Mã lợn</th>
+                    <th>Người khám</th>
+                    <th>Bệnh</th>
+                    <th>Thuốc</th>
+                    <th>Số lượng</th>
+                    <th class="text-center ">Sửa</th>
+                    <th class="text-center ">Xoá</th>
+                  </tr>
+                  </thead>
 
-                <tbody>
-                <tr *ngFor="let treatement of treatements;let i = index" [attr.data-index]="i">
-                  <td>{{i+1}}</td>
-                  <td>{{treatement.treatmentDate | date: 'dd-MM-yyyy'}}</td>
-                  <td>{{treatement.individual.cage.id}}</td>
-                  <td>{{treatement.individual.id}}</td>
-                  <td>{{treatement.doctor}}</td>
-                  <td>{{treatement.kindOfDisease}}</td>
-                  <td>{{treatement.medicine}}</td>
-                  <td>{{treatement.quantily}} viên</td>
-                  <td class="text-center ">
-                    <button class="btn btn-success text-center text-white  "
-                            data-bs-toggle="modal"
-                            data-bs-target="#detail"><i class="fas fa-edit"></i> Sửa
-                    </button>
-                  </td>
-                  <td class="text-center   ">
-                    <button class="btn btn-danger text-center  "
-                            data-bs-toggle="modal"
-                            data-bs-target="#staticBackdrop"><i class="fas fa-trash-alt"></i> Xóa
-                    </button>
-                  </td>
-                </tr>
-                <!-- Modal xoá-->
-                <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static"
-                     data-bs-keyboard="false"
-                     tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                  <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h5 class="modal-title fs-4 fw-bold"
-                            id="staticBackdropLabel">Bạn có muốn xóa thông tin <span
-                          style="color: red"> ... </span> ra khỏi danh sách
-                          này không?</h5>
-                        <button type="button" class="btn-close"
-                                data-bs-dismiss="modal"
-                                aria-label="Close"></button>
-                      </div>
-                      <div class="modal-body fs-5">
-                        Lưu ý: Hành động không thể hoàn tác!!!
-                      </div>
-                      <div class="modal-footer ">
-                        <button type="button" class="btn btn-secondary"
-                                data-bs-dismiss="modal">Thoát
-                        </button>
-                        <button type="button" class="btn btn-danger ">Xóa</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!--Modal sửa-->
-                <div class="modal fade" id="detail" data-bs-backdrop="static"
-                     data-bs-keyboard="false"
-                     tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                  <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h5 class="modal-title fs-4 fw-bold"
-                            id="staticBackdropLabel1">Bạn có muốn sửa thông tin<span
-                          style="color: red"> Lê Quốc Tùng </span>không?</h5>
-                        <button type="button" class="btn-close"
-                                data-bs-dismiss="modal"
-                                aria-label="Close"></button>
-                      </div>
-                      <div class="modal-footer ">
-                        <button type="button" class="btn btn-secondary"
-                                data-bs-dismiss="modal">Thoát
-                        </button>
-                        <button type="button" class="btn btn-danger ">Xác nhận</button>
+                  <tbody>
+                  <tr *ngFor="let treatement of treatements;let i = index" [attr.data-index]="i">
+                    <td>{{i+1}}</td>
+                    <td>{{treatement.treatementDate | date: 'dd-MM-yyyy'}}</td>
+                    <td>{{treatement.individual.cage.id}}</td>
+                    <td>{{treatement.individual.id}}</td>
+                    <td>{{treatement.doctor}}</td>
+                    <td>{{treatement.kindOfDisease}}</td>
+                    <td>{{treatement.medicine}}</td>
+                    <td>{{treatement.quantily}} viên</td>
+                    <td class="text-center ">
+                      <button class="btn btn-success text-center text-white  "
+                              data-bs-toggle="modal"
+                              data-bs-target="#detail"><i class="fas fa-edit"></i> Sửa
+                      </button>
+                    </td>
+                    <td class="text-center   ">
+                      <button class="btn btn-danger text-center  "
+                              data-bs-toggle="modal"
+                              data-bs-target="#staticBackdrop"><i class="fas fa-trash-alt"></i> Xóa
+                      </button>
+                    </td>
+                  </tr>
+                  <!-- Modal xoá-->
+                  <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static"
+                       data-bs-keyboard="false"
+                       tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title fs-4 fw-bold"
+                              id="staticBackdropLabel">Bạn có muốn xóa thông tin <span
+                            style="color: red"> ... </span> ra khỏi danh sách
+                            này không?</h5>
+                          <button type="button" class="btn-close"
+                                  data-bs-dismiss="modal"
+                                  aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body fs-5">
+                          Lưu ý: Hành động không thể hoàn tác!!!
+                        </div>
+                        <div class="modal-footer ">
+                          <button type="button" class="btn btn-secondary"
+                                  data-bs-dismiss="modal">Thoát
+                          </button>
+                          <button type="button" class="btn btn-danger ">Xóa</button>
+                        </div>
                       </div>
                     </div>
                   </div>
+                  <!--Modal sửa-->
+                  <div class="modal fade" id="detail" data-bs-backdrop="static"
+                       data-bs-keyboard="false"
+                       tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title fs-4 fw-bold"
+                              id="staticBackdropLabel1">Bạn có muốn sửa thông tin<span
+                            style="color: red"> Lê Quốc Tùng </span>không?</h5>
+                          <button type="button" class="btn-close"
+                                  data-bs-dismiss="modal"
+                                  aria-label="Close"></button>
+                        </div>
+                        <div class="modal-footer ">
+                          <button type="button" class="btn btn-secondary"
+                                  data-bs-dismiss="modal">Thoát
+                          </button>
+                          <button type="button" class="btn btn-danger ">Xác nhận</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!--Modal-->
+                  </tbody>
+                </table>
+                <div class="">
+                  <ul class="d-flex pagination pagination-sm justify-content-end "
+                      style="margin:20px 0">
+                    <div *ngIf="this.page >0 then previous"></div>
+                    <ng-template #previous>
+                      <li class="page-item px-1">
+                        <a class="page-link bg-success " (click)="previousClick(1)"
+                           style="; color: white" type="button"
+                        >Trang trước</a></li>
+                    </ng-template>
+
+
+                    <input class="page-link text-success" type="number" value="1" min="1" [max]="totalPages"
+                           placeholder="{{totalPages}}" aria-label="Username" [value]="page + 1"
+                           aria-describedby="basic-addon1"
+                           (change)="findPaginnation($event.target.value)">
+                    <li class="page-item ">
+                      <span class="input-group-text page-link text-success">{{page + 1}}/{{totalPages}}</span>
+                    </li>
+
+                    <div *ngIf="this.page  < this.totalPages-1 then nexts "></div>
+                    <ng-template #nexts>
+                      <li class="page-item"><a class="page-link bg-success" (click)="nextClick(1)"
+                                               style="color: white" type="button"
+                      >Trang sau</a></li>
+                    </ng-template>
+                  </ul>
+
                 </div>
-                <!--Modal-->
-                </tbody>
-              </table>
-              <div class="">
-                <ul class="d-flex pagination pagination-sm justify-content-end "
-                    style="margin:20px 0">
-                  <div *ngIf="this.page >0 then previous"></div>
-                  <ng-template #previous>
-                    <li class="page-item px-1">
-                      <a class="page-link bg-success " (click)="previousClick(1)"
-                         style="; color: white" type="button"
-                      >Trang trước</a></li>
-                  </ng-template>
-
-
-                  <input class="page-link text-success" type="number" value="1" min="1" [max]="totalPages"
-                         placeholder="{{totalPages}}" aria-label="Username" [value]="page + 1"
-                         aria-describedby="basic-addon1"
-                         (change)="findPaginnation($event.target.value)">
-                  <li class="page-item ">
-                    <span class="input-group-text page-link text-success">{{page + 1}}/{{totalPages}}</span>
-                  </li>
-
-                  <div *ngIf="this.page  < this.totalPages-1 then nexts "></div>
-                  <ng-template #nexts>
-                    <li class="page-item"><a class="page-link bg-success" (click)="nextClick(1)"
-                                             style="color: white" type="button"
-                    >Trang sau</a></li>
-                  </ng-template>
-                </ul>
-
               </div>
             </div>
-          </div>
           </ng-template>
         </div>
       </div>
